--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <nav>
         <a href="#">HOME</a>
         <a href="#">NOTICIAS</a>
-        <a href="#">CURIOSIDADES</a>
-        <a href="#">FALE CONOSCO</a>
+        <a href="#">CONTACTO</a>
     </nav>
     <main>
         <article>
