--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </article>
     </main>
     <footer>
-        <p>Site Criado por <a href="https://www.instagram.com/mario_negrao/" target="_blank" class="externo">Mário Negrão</a></p>
+        <p>Site Criado por <a href="https://github.com/mariojnegrao" target="_blank" class="externo">Mário Negrão</a></p>
     </footer>
 </body>
 </html>
